Fixed white space

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,11 @@
 .wrapper {
   position: absolute;
-  width: auto;
+  width: 100%;
   height: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
   background-color: black;
 }
 
